src/test/ui/parser/lex-bad-char-literals-2.stderr
error: character literal may only contain one codepoint: 'nope'
  --> $DIR/lex-bad-char-literals-2.rs:3:5
   |
LL |     'nope' //~ ERROR: character literal may only contain one codepoint: 'nope'
   |     ^^^^^^

error: aborting due to previous error

